# webapp-tauri-learning

./: README.md
src/: .#index.html  index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/bin_read/: Cargo.toml
src-tauri/bin_read/src/: lib.rs
src-tauri/src/: main.rs
