[package]
name = "haffman_be_like"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[build-dependencies]
tauri-build = { version = "1.5", features = [] }


[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
tauri-api = "0.7.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


[dependencies.bin_read]
path = "./bin_read"


[features]
custom-protocol = ["tauri/custom-protocol"]

